--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,6 @@
     "babel-plugin-import": "^1.13.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
-    "express": "^4.17.2",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.2",
     "mini-css-extract-plugin": "^2.5.3",
@@ -28,7 +27,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
@@ -36,5 +35,9 @@
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
+  },
+  "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.17.2"
   }
 }
