--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.12",
+    "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "antd": "^4.18.5",
@@ -37,7 +38,11 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.16.7",
+    "@babel/runtime-corejs3": "^7.16.8",
     "connect-history-api-fallback": "^1.6.0",
-    "express": "^4.17.2"
+    "core-js": "^3.20.3",
+    "express": "^4.17.2",
+    "regenerator-runtime": "^0.13.9"
   }
 }
