--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
   "private": true,
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "multer": "^1.4.4"
   }
