--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "start": "webpack serve --open",
-    "test": "webpack && node ./server.js"
+    "start": "webpack --config webpack.prod.js && node ./server.js",
+    "test": "webpack serve --open --config webpack.dev.js"
   },
   "author": "leningkoei",
   "private": true,
@@ -35,7 +35,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "webpack-dev-server": "^4.7.3",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.16.7",
