--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node ./src/index.js",
+    "test": "tsc && node ./dist/index.js",
     "start": "node ./src/index.js"
   },
   "author": "leningkoei",
@@ -14,10 +14,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "chalk": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "multer": "^1.4.4"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.5"
   }
 }
