2022/02/21 20:12 Complete model of base file part.

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "tsc && node ./dist/index.js",
+    "test": "tsc && node ./dist/srcKai/index.js",
     "start": "node ./src/index.js"
   },
   "author": "leningkoei",
