2022/02/23 16:26 Completed sign in/up, get root folder.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "noEmitOnError": true,
     "outDir": "./dist",
-    "sourceMap": true,
+    "inlineSourceMap": true,
     "target": "ESNext"
   },
   "include": [ "./srcKai/**/*" ],
