--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "tsc && node ./dist/index.js",
     "test": "tsc && node ./dist/index.js"
   },
   "author": "leningkoei",
