--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@monaco-editor/react": "^4.3.1",
     "antd": "^4.18.5",
     "axios": "^0.25.0",
     "babel-loader": "^8.2.3",
